# gdaltools

./: .gitignore  Readme.md
gdal_addo/: CMakeLists.txt  conanfile.py
gdal_translate/: CMakeLists.txt  conanfile.py  readme.md
gdal_translate/src/: gdal_translate_bin.cpp
gdal_translate/wms/: Swisstopo_wms.xml  onearth_global.xml
